--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body,
 html {
     margin: 0;
     height: 100%;
+    width: 100%;
     scroll-behavior: smooth;
     color: white;
     box-sizing: border-box;
     background-color: bisque;
     font-family: libre_caslon_text;
+    color: black;
 }
 
 @font-face {
@@ -16,6 +24,8 @@ html {
     font-weight: 500;
 }
 
+
+/*  */
 header {
     background-color: #F08832;
     height: 100px;
@@ -27,8 +37,36 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 0px 10px 40px;
+    padding: 10px 60px 10px 40px;
 
+}
+
+.shopping-cart {
+    position: relative;
+}
+
+.shopping-cart span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    background-color: red;
+    border-radius: 50%;
+    color: #fff;
+    position: absolute;
+    top: 60%;
+    right: -16px;
+}
+
+.fa-shopping-cart {
+    color: white;
+}
+
+.fa-shopping-cart:hover {
+    cursor: pointer;
+    box-shadow: rgb(136, 135, 135, 0.5);
+    transform: scale(1.03);
 }
 
 .logo {
@@ -36,8 +74,9 @@ header {
 }
 
 
+/*  */
 .mainImage {
-    height: 200px;
+    height: 300px;
     width: 100%;
     padding-top: 100px;
     background-image: url(img/steak.jpg);
@@ -45,29 +84,125 @@ header {
     background-position: center;
 }
 
+
+/*  */
+.restaurant_information {
+    padding: 40px 40px;
+}
+
 .restaurantName {
-    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     color: black;
 }
 
 .Restaurant_Title {
     margin: 0;
-    padding: 50px 0px 10px 40px;
     text-decoration: underline;
+    font-size: 32px;
 }
 
 .stars {
     margin: 0;
-    padding: 00px 0px 0px 40px;
     display: flex;
     align-items: center;
 }
 
-.rating{
+.rating {
     margin-right: 10px;
 }
+
 .checked {
-  color: orange;
-  
+    color: orange;
+
+}
+
+.main_btn {
+    background-color: lightgray;
+    color: black;
+    border: none;
+    padding: 14px 28px;
+    font-size: 16px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.main_btn:hover {
+    cursor: pointer;
+    box-shadow: rgb(136, 135, 135, 0.5);
+    transform: scale(1.03);
+}
+
+
+/*  */
+.select_category {
+    padding: 0px 40px;
+    gap: 40px;
+}
+
+.main_btn_category {
+    background-color: rgb(60, 57, 57);
+    color: white;
+    border: none;
+    padding: 14px 28px;
+    font-size: 16px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.main_btn_category:hover {
+    box-shadow: rgb(136, 135, 135, 0.5);
+    transform: scale(1.03);
+}
+
+
+/*  */
+.main_menu {
+    padding: 40px 40px;
+}
+
+.select_menu {
+    display: flex;
+    flex-direction: column;
+    padding: 16px 0;
+    border-bottom: 1px solid #b3b1b1;
+    border-top: 1px solid #b3b1b1;
+}
+
+h2{
+    margin: 0;
+    font-size: 18px;
+}
+
+span{
+    font-size: 12px;
+}
+
+.order {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.order_btn {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    border: 0.5px solid rgb(135, 132, 132);
+    color: #F08832;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.order_btn:hover {
+    box-shadow: 0 0 10px rgba(136, 135, 135, 0.5);
+    transform: scale(1.03);
 }
