--- a/styles/standards.css
+++ b/styles/standards.css
@@ -1,28 +1,49 @@
-*,
-*::before,
-*::after {
+* {
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    font-family: libre_caslon_text;
 }
 
-html,
 body {
-    margin: 0;
-    height: 100%;
-    width: 100%;
-    scroll-behavior: smooth;
-    font-family: libre_caslon_text;
-    color: black;
+    position: relative;
+    min-height: 100dvh;
     background-color: bisque;
 }
 
-
 @font-face {
     font-family: 'Libre_Caslon_Text';
-    src: url('../font/Libre_Caslon_Text/LibreCaslonText-Bold.ttf') format('truetype');
+    src: url(../assets/font/Libre_Caslon_Text/LibreCaslonText-Bold.ttf) format('truetype');
     font-style: bold;
     font-weight: 500;
 }
 
+main {
+    flex: 1;
+}
+
+header {
+    background-color: #F08832;
+    height: 100px;
+    width: 100%;
+}
+
+.header_content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 60px 10px 40px;
+}
+
+main {
+    display: flex;
+    align-items: flex-start;
+}
+
+h1{
+    font-size: 48px;
+}
 
 h2 {
     margin: 0;
@@ -33,8 +54,8 @@ span {
     font-size: 12px;
 }
 
-p{
-    font-size: 12px;
+p {
+    font-size: 16px;
 }
 
 button,
@@ -48,11 +69,25 @@ button,
     font-family: inherit;
 }
 
-.checked {
-    color: orange;
-}
-
-a{
+a {
     text-decoration: none;
     color: black;
+}
+
+footer {
+    width: 100%;
+    padding: 35px;
+    background-color: #F08832;
+
+}
+
+.footer_links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_span{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
