--- a/styles/standards.css
+++ b/styles/standards.css
@@ -41,6 +41,12 @@ main {
     align-items: flex-start;
 }
 
+li{
+    display: flex;
+    justify-content: center;
+
+}
+
 h1{
     font-size: 48px;
 }
@@ -48,6 +54,13 @@ h1{
 h2 {
     margin: 0;
     font-size: 24px;
+}
+
+h3{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    text-decoration: underline;
 }
 
 span {
