--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,7 @@
     padding: 14px 28px;
     font-size: 16px;
     border-radius: 50px;
+    width: 180px;
 }
 
 .main_btn_category:hover {
@@ -174,7 +175,7 @@
 }
 
 #shopping_cart {
-    max-height: 600px;
+    max-height: 500px;
     overflow-y: auto;
     padding-right: 8px;
 }
@@ -294,13 +295,13 @@
     justify-content: center;
 }
 
-@media (min-width: 1001px) {
+@media (min-width: 1201px) {
     .close-mobile-cart-btn {
         display: none;
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
     main {
         flex-direction: column;
     }
@@ -375,18 +376,23 @@
 
 }
 
-@media (max-width: 545px) {
+@media (max-width: 650px) {
     .restaurant_information {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+    }
+
+    .restaurant-information-header{
+        flex-direction: column;
+        align-items: center;
     }
 
     .select_category {
         display: flex;
         flex-direction: column;
         gap: 12px;
+        align-items: center;
     }
 
     .img-background-logo{
